# everthink-ide

./: .gitignore  AGENTS.md  AUDIT.md  Cargo.toml  PROGRESS.md  README.md  SPEC.md  SPECIFICATION.md
src/: main.rs
src/cli/: TODO.md  mod.rs
src/commands/: mod.rs  review.rs
src/config/: mod.rs
src/core/: TODO.md  audit.rs  autonomous.rs  mod.rs  progress.rs  spec_writer.rs
src/providers/: TODO.md  anthropic.rs  mod.rs  openai.rs  openrouter.rs  stub.rs
src/skills/: mod.rs
src/storage/: mod.rs
src/tools/: TODO.md  bash.rs  fs.rs  mcp.rs  mod.rs  python_engine.rs  registry.rs  verify.rs  web.rs
src/tui/: TODO.md  chat.rs  input.rs  mod.rs  picker.rs  status.rs
