[package]
name = "everthink"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "everthink"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Filesystem / paths
directories = "5"

# Time / IDs
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"

# Search
tantivy = "0.22"
glob = "0.3"
regex = "1"
walkdir = "2"

# Clipboard
arboard = "3"

# String similarity
strsim = "0.11"

# Markdown + syntax highlighting
pulldown-cmark = "0.11"
syntect = "5"

# Async trait support
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
